--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.generate-ddl=true
 spring.jpa.database=mysql
 
 spring.datasource.hikari.maximum-pool-size=10
+
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
